		System: fixed login PHP warning
		System Admin: Improved version comparison in module updater
		System Admin: Improved version comparison in non-login database updater
		Activities: fixed error in adding and editing activities when payment is turned off
		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
		Students: added year group to New Students report when using Date Range setting 
		User Admin: added notification to form tutor(s) when a student's privacy options change (via Edit or Data Update).		
		User Admin: made max_input_vars test a little more generous
		
		
v11.0.00
--------
	Headlines
		New Tracking modules adds longitudinal graphing and data exports of student assessment data
		New Formal Assessment module facilitates teacher-inputted, school-wide Internal Assessments, and incorporates old External Assessment module
		New custom fields feature allows easy creation of new user fields for use in User Admin, Application Form, Data Updater and Students modules
		Improved user import functionality allows operation in both sync and import modes
		Additional parent interfaces give access to Behaviour and Finance information
		Improved Class overview page within the Departments module

	Changes With Important Notices
		System: generalised stars, so that they are all in one table, with common methods, usable to additional modules. 
			NOTE: RESETS STARS/LIKES TO ZERO
		System admin: changed administrator, DBA and admissions contacts to system users, not addresses. 
			NOTE: THIS MEANS ADMINS NEED TO BE RESET UNLESS THEY HAVE gibbonPersonID=1
		Google: migrated OAuth authentication to use main Google libraries. 
			NOTE: REQUIRES REDIRECT URL RESET IN BOTH GOOGLE DEV CONSOLE AND IN GIBBON
		
	Significant Changes
		System: added module actions to Fast Finder, in order to allow quick access to any functionality in the system